modified:   home/__pycache__/urls.cpython-312.pyc 	modified:   home/__pycache__/views.cpython-312.pyc 	modified:   home/urls.py 	modified:   home/views.py 	new file:   media/Designer_2LUQrp7.png 	new file:   media/Designer_752hwXo.png 	new file:   media/Designer_7DyqvH1.png 	new file:   media/Designer_7oRScua.png 	new file:   media/Designer_8b2iIv9.png 	new file:   media/Designer_8pw8qvz.png 	new file:   media/Designer_9JsQv5Y.png 	new file:   media/Designer_CJBrvGx.png 	new file:   media/Designer_E799hTa.png 	new file:   media/Designer_EG7uMOJ.png 	new file:   media/Designer_F5couQy.png 	new file:   media/Designer_GXIAKcM.png 	new file:   media/Designer_HASVRXF.png 	new file:   media/Designer_HtyOsrt.png 	new file:   media/Designer_OK9Gbr0.png 	new file:   media/Designer_Pm2cUFZ.png 	new file:   media/Designer_TlHKFHb.png 	new file:   media/Designer_UYoq1ed.png 	new file:   media/Designer_UiF05iF.png 	new file:   media/Designer_V1qOfxa.png 	new file:   media/Designer_VxKmFzn.png 	new file:   media/Designer_Wdbaea4.png 	new file:   media/Designer_Xc3SOjD.png 	new file:   media/Designer_YoJRD4U.png 	new file:   media/Designer_a5ydVm3.png 	new file:   media/Designer_l3pCGnv.png 	new file:   media/Designer_m8LkHul.png 	new file:   media/Designer_nfQ5qu7.png 	new file:   media/Designer_oDsOCFu.png 	new file:   media/Designer_pJXLQp6.png 	new file:   media/Designer_rOCiL4A.png 	new file:   media/Designer_vE4UTyH.png 	new file:   media/Designer_yJmXWas.png 	new file:   media/sepia_Designer_2LUQrp7.png 	new file:   media/sepia_Designer_752hwXo.png 	new file:   media/sepia_Designer_7DyqvH1.png 	new file:   media/sepia_Designer_7oRScua.png 	new file:   media/sepia_Designer_8b2iIv9.png 	new file:   media/sepia_Designer_8pw8qvz.png 	new file:   media/sepia_Designer_9JsQv5Y.png 	new file:   media/sepia_Designer_CJBrvGx.png 	new file:   media/sepia_Designer_E799hTa.png 	new file:   media/sepia_Designer_EG7uMOJ.png 	new file:   media/sepia_Designer_F5couQy.png 	new file:   media/

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,16 +28,16 @@
       </p>
     </div>
     <!-- End Header -->
-  
+    
     <!-- Drop Zoon -->
     <div id="dropZoon" class="upload-area__drop-zoon drop-zoon">
       <span class="drop-zoon__icon">
         <i class='bx bxs-file-image'></i>
       </span>
-      <p class="drop-zoon__paragraph">Drop your file here or Click to browse</p>
+      <p class="drop-zoon__paragraph" >Drop your file here or Click to browse</p>
       <span id="loadingText" class="drop-zoon__loading-text">Please Wait</span>
-      <img src="" alt="Preview Image" id="previewImage" class="drop-zoon__preview-image" draggable="false">
-      <input type="file" id="fileInput" name="image" class="drop-zoon__file-input" accept="image/*">
+      <img src="{{ uploaded_file_url }}" alt="Preview Image" id="previewImage"  class="drop-zoon__preview-image" draggable="false">
+      <input type="file" id="fileInput" name="image" value="{{ uploaded_file_url }}" class="drop-zoon__file-input" accept="image/*">
     </div>
     <!-- End Drop Zoon -->
   
